<resources>
    <string formatted="false" name="about0_">Watch your call, message and data plans!</string>
    <string formatted="false" name="about0">CallMeter generates reports from call, message and data logs. It supports several modes of billing.</string>
    <string formatted="false" name="about1">The output format is usage | time or count used this billing period | time or count overall.</string>
    <string formatted="false" name="about2">The billing mode specifies the length of the first / next billing intervals. E.g. 60/10 means every call is billed for minimum 60s, any longer call is rounded up to next full 10s.</string>
    <string formatted="false" name="about3">CallMeter runs in background every 30min (only if not in standby). This means, that deleting calls or messages older than 30min will not change your stats. Deleting calls or messages younger than 30min may result in wrong statistics.</string>
    <string formatted="false" name="author_and_many_more">and many more...</string>
    <string formatted="false" name="add_">Add</string>
    <string formatted="false" name="add_log">Add log entry</string>
    <string formatted="false" name="length_hint_call">Length in seconds</string>
    <string formatted="false" name="length_hint_data">Length in kB</string>
    <string formatted="false" name="settings">Preferences</string>
    <string formatted="false" name="update_interval_">Update interval</string>
    <string formatted="false" name="update_interval_hint">Shorter period will use more battery.</string>
    <string formatted="false" name="update_interval_data_">Update interval (data)</string>
    <string formatted="false" name="update_interval_data_hint">Update data stats needs to be done more often. Esp. Samsung needs very short intervals.</string>
    <string formatted="false" name="date_begin_">Beginning of records</string>
    <string formatted="false" name="date_begin_hint">Ignore any logs before this date.</string>
    <string formatted="false" name="delete_old_logs_">Delete logs older than</string>
    <string formatted="false" name="delete_old_logs_help">Delete logs older than x days from internal database. Leave empty to disable.</string>
    <string formatted="false" name="common_prefs_">Common preferences</string>
    <string formatted="false" name="edit_">Edit</string>
    <string formatted="false" name="delete_">Delete</string>
    <string formatted="false" name="up_">Move up</string>
    <string formatted="false" name="down_">Move down</string>
    <string formatted="false" name="about_">About</string>
    <string formatted="false" name="about_hint">About this app</string>
    <string formatted="false" name="faq_hint">Some tips and tricks, how to set up this app.</string>
    <string formatted="false" name="feedback_">Feedback</string>
    <string formatted="false" name="feedback_hint">Report bugs, request features ...</string>
    <string formatted="false" name="google_plus_hint">Follow me on Google+.\nGet update notifications etc.</string>
    <string formatted="false" name="more_">More Apps..</string>
    <string formatted="false" name="billing_">Billing</string>
    <string formatted="false" name="billday_">First day of your bill</string>
    <string formatted="false" name="billday_last">Last day of your bill</string>
    <string formatted="false" name="billmode_">Mode of billing</string>
    <string formatted="false" name="billdate_">Start of billing period:</string>
    <string formatted="false" name="appearance_">Appearance</string>
    <string formatted="false" name="behavior_">Behavior</string>
    <string formatted="false" name="appearance_and_behavior_">Appearance &amp; behavior</string>
    <string formatted="false" name="widget_stats_title">Call Meter (stats)</string>
    <string formatted="false" name="widget_logs_title">Call Meter (last log)</string>
    <string formatted="false" name="widgets_">Widgets</string>
    <string formatted="false" name="simple_preferences_">Simple preferences</string>
    <string formatted="false" name="simple_preferences_hint">Very simple preferences, suitable for most users. Only available with default rule set.</string>
    <string formatted="false" name="advanced_preferences_">Advanced preferences</string>
    <string formatted="false" name="advanced_preferences_hint">This allows you to set a way more complex setup. Most Users won\'t need it.</string>
    <string formatted="false" name="theme_">Theme</string>
    <string formatted="false" name="textsize_">Text size</string>
    <string formatted="false" name="show_today_">Show today</string>
    <string formatted="false" name="show_today_hint">Show today stats</string>
    <string formatted="false" name="show_total_">Show total</string>
    <string formatted="false" name="show_total_hint">Show total stats, disable to see current only.</string>
    <string formatted="false" name="show_hours_">Show hours</string>
    <string formatted="false" name="show_hours_hint">Show time in seconds, minutes, hours and days.\nIf unchecked only seconds and minutes are shown.</string>
    <string formatted="false" name="show_help_">Show help</string>
    <string formatted="false" name="show_help_hint">Show help in Plans/Rules setup view.</string>
    <string formatted="false" name="show_target_billday_">Show last bill day</string>
    <string formatted="false" name="show_target_billday_hint">Show last day of bill instead of first.</string>
    <string formatted="false" name="show_calllength_">Show info after hanging up</string>
    <string formatted="false" name="hide_zero_">Hide empty plans</string>
    <string formatted="false" name="hide_zero_hint">Hide plans containing no item.</string>
    <string formatted="false" name="hide_nocost_">Hide no cost plans</string>
    <string formatted="false" name="hide_nocost_hint">Hide plans with no cost.</string>
    <string formatted="false" name="hide_progressbars_">Hide progress bars</string>
    <string formatted="false" name="hide_progressbars_hint">Hide progress bars in main view.</string>
    <string formatted="false" name="custom_currency_symbol_">Custom currency symbol</string>
    <string formatted="false" name="custom_currency_symbol_hint">Set a custom currency symbol, leave empty for system default.</string>
    <string formatted="false" name="custom_currency_format_">Custom currency format</string>
    <string formatted="false" name="custom_currency_format_hint">Select a custom currency format.</string>
    <string formatted="false" name="custom_date_format_">Custom date format</string>
    <string formatted="false" name="custom_date_format_hint">Select a custom date format.</string>
    <string formatted="false" name="custom_delimiter_">Custom delimiter</string>
    <string formatted="false" name="custom_delimiter_hint">Set a custom delimiter separating the blocks of statistics.</string>
    <string formatted="false" name="split_sms_at_160_">Split text messages at 160 chars</string>
    <string formatted="false" name="split_sms_at_160_hint">Disable to use android\'s system method.</string>
    <string formatted="false" name="ask_for_plan_">Ask for plan</string>
    <string formatted="false" name="plans">Plans</string>
    <string formatted="false" name="plans_hint">Set your plans for all kind of billing here.</string>
    <string formatted="false" name="rules">Rules</string>
    <string formatted="false" name="rules_hint">Set your billing rules here.</string>
    <string formatted="false" name="numbergroups_edit_">Number groups</string>
    <string formatted="false" name="numbergroups_edit_hint">Edit number groups here.</string>
    <string formatted="false" name="hourgroups_edit_">Hour groups</string>
    <string formatted="false" name="hourgroups_edit_hint">Edit hour groups here.</string>
    <string formatted="false" name="calls">Calls</string>
    <string formatted="false" name="sms">SMS</string>
    <string formatted="false" name="mms">MMS</string>
    <string formatted="false" name="data">Data</string>
    <string formatted="false" name="second_sim_">Second SIM card</string>
    <string formatted="false" name="prepaid_">Prepaid plan</string>
    <string formatted="false" name="prepaid_hint">Bill on prepaid basis. Cost is substracted from balance as you call etc.</string>
    <string formatted="false" name="strip_leading_zeros_">Strip leading zeros</string>
    <string formatted="false" name="strip_leading_zeros_hint">Strip leading zeros when comparing numbers.</string>
    <string formatted="false" name="number_prefix_">International prefix</string>
    <string formatted="false" name="number_prefix_hint">Your international prefix in format like +1 or +49. It\'s used to match numbers like +49170.. and 0179..</string>
    <string formatted="false" name="reset_data_">Reset statistics</string>
    <string formatted="false" name="reset_data_hint">Resetting call/sms data will result in recalculation of the statistics.\n\nResetting traffic statistics is permanent. It only resets traffic done before boot!</string>
    <string formatted="false" name="help_">Help</string>
    <string formatted="false" name="billday_help">Set this to the first day of the bill of the current billing period.</string>
    <string formatted="false" name="websms_">WebSMS</string>
    <string formatted="false" name="calls_voip_">VoIP calls with supported apps</string>
    <string formatted="false" name="export_">Export ...</string>
    <string formatted="false" name="export_hint">Export rule sets, logs or groups</string>
    <string formatted="false" name="export_sd">Export to SD card</string>
    <string formatted="false" name="export_rules_">Export rule set</string>
    <string formatted="false" name="export_rules_hint">Export rule set as mail.</string>
    <string formatted="false" name="export_rules_dev_">Export rule set to developer</string>
    <string formatted="false" name="export_rules_dev_hint">Export rule set to let others import it.</string>
    <string formatted="false" name="export_logs_">Backup logs</string>
    <string formatted="false" name="export_logs_hint">Backup logs as mail.</string>
    <string formatted="false" name="export_logs_csv_">Export CSV</string>
    <string formatted="false" name="export_logs_csv_hint">Export logs as CSV.</string>
    <string formatted="false" name="export_numgroups_">Export number groups</string>
    <string formatted="false" name="export_numgroups_hint">Export number groups as mail.</string>
    <string formatted="false" name="export_hourgroups_">Export hour groups</string>
    <string formatted="false" name="export_hourgroups_hint">Export hour groups as mail.</string>
    <string formatted="false" name="import_rules_">Import rule set</string>
    <string formatted="false" name="import_rules_users">Users\' rules</string>
    <string formatted="false" name="import_rules_sd_">Import rule set from SD card</string>
    <string formatted="false" name="import_rules_sd_hint">Import rule set directly from SD card.</string>
    <string formatted="false" name="import_rules_default_">Import default rule set</string>
    <string formatted="false" name="import_rules_default_hint">Import default rule set shipped with the app.</string>
    <string formatted="false" name="loading">Loading ...</string>
    <string formatted="false" name="alerts_">Alerts</string>
    <string formatted="false" name="alerts_hint">Set alerts based on plan usage.</string>
    <string formatted="false" name="send_devices_">Send devices</string>
    <string formatted="false" name="send_devices_hint">Send list of devices to the developer. This is only needed if your data stats are zero.</string>
    <string formatted="false" name="debug_">Debug</string>
    <string formatted="false" name="send_logs_">Send logs</string>
    <string formatted="false" name="send_logs_hint">Send your device\'s logs to the developer.\nDo this only if you were asked to do so.</string>
</resources>