<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009-2013 Felix Bechstein -->
<!--
		This file is part of Call Meter 3G. This program is free software; you
		can redistribute it and/or modify it under the terms of the GNU
		General Public License as published by the Free Software Foundation;
		either version 3 of the License, or (at your option) any later
		version.
-->
<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
            android:defaultValue="light"
            android:entries="@array/themes"
            android:entryValues="@array/themes_values"
            android:key="theme"
            android:title="@string/theme_"/>

    <PreferenceScreen android:title="@string/textsize_">
        <intent
                android:action="TEXTSIZE"
                android:targetClass="de.ub0r.android.callmeter.ui.prefs.PreferencesPlain"
                android:targetPackage="de.ub0r.android.callmeter"/>
    </PreferenceScreen>

    <CheckBoxPreference
            android:key="show_target_billday"
            android:summary="@string/show_target_billday_hint"
            android:title="@string/show_target_billday_"/>
    <CheckBoxPreference
            android:key="hide_zero"
            android:summary="@string/hide_zero_hint"
            android:title="@string/hide_zero_"/>
    <CheckBoxPreference
            android:key="hide_nocost"
            android:summary="@string/hide_nocost_hint"
            android:title="@string/hide_nocost_"/>
    <CheckBoxPreference
            android:key="show_today"
            android:summary="@string/show_today_hint"
            android:title="@string/show_today_"/>
    <CheckBoxPreference
            android:defaultValue="false"
            android:key="show_total"
            android:summary="@string/show_total_hint"
            android:title="@string/show_total_"/>
    <CheckBoxPreference
            android:defaultValue="true"
            android:key="show_hours"
            android:summary="@string/show_hours_hint"
            android:title="@string/show_hours_"/>
    <CheckBoxPreference
            android:key="hide_progressbars"
            android:summary="@string/hide_progressbars_hint"
            android:title="@string/hide_progressbars_"/>
    <CheckBoxPreference
            android:defaultValue="true"
            android:key="show_help"
            android:summary="@string/show_help_hint"
            android:title="@string/show_help_"/>

    <EditTextPreference
            android:defaultValue=" | "
            android:key="custom_delimiter"
            android:summary="@string/custom_delimiter_hint"
            android:title="@string/custom_delimiter_"/>
    <EditTextPreference
            android:key="currency_symbol"
            android:summary="@string/custom_currency_symbol_hint"
            android:title="@string/custom_currency_symbol_"/>

    <ListPreference
            android:entries="@array/currency_formats"
            android:entryValues="@array/currency_formats_values"
            android:key="currency_format"
            android:summary="@string/custom_currency_format_hint"
            android:title="@string/custom_currency_format_"/>
    <ListPreference
            android:entries="@array/date_formats"
            android:entryValues="@array/date_formats_values"
            android:key="date_format"
            android:summary="@string/custom_date_format_hint"
            android:title="@string/custom_date_format_"/>

    <CheckBoxPreference
            android:key="show_callinfo"
            android:summary="@string/show_calllength_"
            android:title="@string/show_calllength_"/>

</PreferenceScreen>
