<?xml version="1.0" encoding="utf-8"?>
<!--    Copyright (C) 2009-2015 Felix Bechstein -->
<!--
		This file is part of Call Meter 3G. This program is free software; you
		can redistribute it and/or modify it under the terms of the GNU
		General Public License as published by the Free Software Foundation;
		either version 3 of the License, or (at your option) any later
		version.
-->
<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceScreen
            android:key="export_rules_sd"
            android:title="@string/export_sd"/>
    <PreferenceScreen
            android:key="export_rules_dev"
            android:summary="@string/export_rules_dev_hint"
            android:title="@string/export_rules_dev_"/>
    <PreferenceScreen
            android:key="export_rules"
            android:summary="@string/export_rules_hint"
            android:title="@string/export_rules_"/>
    <PreferenceScreen
            android:key="export_logs_csv"
            android:summary="@string/export_logs_csv_hint"
            android:title="@string/export_logs_csv_"/>
    <PreferenceScreen
            android:key="export_logs"
            android:summary="@string/export_logs_hint"
            android:title="@string/export_logs_"/>
    <PreferenceScreen
            android:key="export_numgroups"
            android:summary="@string/export_numgroups_hint"
            android:title="@string/export_numgroups_"/>
    <PreferenceScreen
            android:key="export_hourgroups"
            android:summary="@string/export_hourgroups_hint"
            android:title="@string/export_hourgroups_"/>

</PreferenceScreen>