<?xml version="1.0" encoding="utf-8"?>
<!--    Copyright (C) 2009-2015 Felix Bechstein -->
<!--
		This file is part of Call Meter 3G. This program is free software; you
		can redistribute it and/or modify it under the terms of the GNU
		General Public License as published by the Free Software Foundation;
		either version 3 of the License, or (at your option) any later
		version.
-->
<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceScreen
            android:summary="@string/alerts_hint"
            android:title="@string/alerts_">
        <intent
                android:action="ALERT"
                android:targetClass="de.ub0r.android.callmeter.ui.prefs.PreferencesPlain"
                android:targetPackage="de.ub0r.android.callmeter"/>
    </PreferenceScreen>

    <CheckBoxPreference
            android:key="split_at_160"
            android:summary="@string/split_sms_at_160_hint"
            android:title="@string/split_sms_at_160_"/>

    <ListPreference
            android:defaultValue="60"
            android:entries="@array/update_interval"
            android:entryValues="@array/update_interval_values"
            android:key="update_interval"
            android:summary="@string/update_interval_hint"
            android:title="@string/update_interval_"/>
    <ListPreference
            android:defaultValue="2"
            android:entries="@array/update_interval_data"
            android:entryValues="@array/update_interval_data_values"
            android:key="update_interval_data"
            android:summary="@string/update_interval_data_hint"
            android:title="@string/update_interval_data_"/>

    <DatePreference
            android:key="date_begin"
            android:summary="@string/date_begin_hint"
            android:title="@string/date_begin_"/>

    <EditTextPreference
            android:defaultValue="90"
            android:inputType="number"
            android:key="delete_old_logs"
            android:summary="@string/delete_old_logs_help"
            android:title="@string/delete_old_logs_"/>

    <CheckBoxPreference
            android:key="strip_leading_zeros"
            android:summary="@string/strip_leading_zeros_hint"
            android:title="@string/strip_leading_zeros_"/>

    <EditTextPreference
            android:inputType="phone"
            android:key="intPrefix"
            android:summary="@string/number_prefix_hint"
            android:title="@string/number_prefix_"/>

    <PreferenceScreen android:title="@string/ask_for_plan_">
        <intent
                android:action="ASK_FOR_PLAN"
                android:targetClass="de.ub0r.android.callmeter.ui.prefs.PreferencesPlain"
                android:targetPackage="de.ub0r.android.callmeter"/>
    </PreferenceScreen>

</PreferenceScreen>