<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009-2013 Felix Bechstein -->
<!--
		This file is part of Call Meter 3G. This program is free software; you
		can redistribute it and/or modify it under the terms of the GNU
		General Public License as published by the Free Software Foundation;
		either version 3 of the License, or (at your option) any later
		version.
-->
<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/appearance_and_behavior_">
        <PreferenceScreen android:title="@string/appearance_">
            <intent
                    android:action="APPERANCE"
                    android:targetClass="de.ub0r.android.callmeter.ui.prefs.PreferencesPlain"
                    android:targetPackage="de.ub0r.android.callmeter"/>
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/behavior_">
            <intent
                    android:action="BEHAVIOR"
                    android:targetClass="de.ub0r.android.callmeter.ui.prefs.PreferencesPlain"
                    android:targetPackage="de.ub0r.android.callmeter"/>
        </PreferenceScreen>
        <PreferenceScreen
                android:key="widgets"
                android:title="@string/widgets_">
            <intent
                    android:action="WIDGETS"
                    android:targetClass="de.ub0r.android.callmeter.ui.prefs.PreferencesPlain"
                    android:targetPackage="de.ub0r.android.callmeter"/>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/billing_">
        <PreferenceScreen
                android:key="simple_settings"
                android:summary="@string/simple_preferences_hint"
                android:title="@string/simple_preferences_">
            <intent
                    android:action="android.intent.action.MAIN"
                    android:targetClass="de.ub0r.android.callmeter.ui.prefs.SimplePreferences"
                    android:targetPackage="de.ub0r.android.callmeter"/>
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/advanced_preferences_">
            <intent
                    android:action="ADVANCED"
                    android:targetClass="de.ub0r.android.callmeter.ui.prefs.PreferencesPlain"
                    android:targetPackage="de.ub0r.android.callmeter"/>
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/help_">
            <intent
                    android:action="android.intent.action.MAIN"
                    android:targetClass="de.ub0r.android.callmeter.ui.HelpActivity"
                    android:targetPackage="de.ub0r.android.callmeter"/>
        </PreferenceScreen>
        <PreferenceScreen android:title="@string/import_rules_">
            <intent
                    android:action="IMPORT"
                    android:targetClass="de.ub0r.android.callmeter.ui.prefs.PreferencesPlain"
                    android:targetPackage="de.ub0r.android.callmeter"/>
        </PreferenceScreen>
        <PreferenceScreen
                android:summary="@string/export_hint"
                android:title="@string/export_">
            <intent
                    android:action="EXPORT"
                    android:targetClass="de.ub0r.android.callmeter.ui.prefs.PreferencesPlain"
                    android:targetPackage="de.ub0r.android.callmeter"/>
        </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about_">
        <PreferenceScreen
                android:summary="@string/about_hint"
                android:title="@string/about_">
            <intent
                    android:action="android.intent.action.MAIN"
                    android:targetClass="de.ub0r.android.callmeter.ui.AboutActivity"
                    android:targetPackage="de.ub0r.android.callmeter"/>
        </PreferenceScreen>
        <PreferenceScreen
                android:summary="@string/faq_hint"
                android:title="@string/faq_">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://github.com/felixb/callmeter/wiki/FAQ"/>
        </PreferenceScreen>
        <PreferenceScreen
                android:summary="@string/feedback_hint"
                android:title="@string/feedback_">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://github.com/felixb/callmeter/issues"/>
        </PreferenceScreen>
        <PreferenceScreen
                android:summary="@string/google_plus_hint"
                android:title="@string/google_plus_">
            <intent
                    android:action="android.intent.action.VIEW"
                    android:data="https://plus.google.com/101490294894990964252"/>
        </PreferenceScreen>
        <PreferenceScreen
                android:key="more_apps"
                android:title="@string/more_"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/debug_"
                        android:key="debug">
        <PreferenceScreen
                android:key="reset_data"
                android:summary="@string/reset_data_hint"
                android:title="@string/reset_data_"/>
        <PreferenceScreen
                android:key="send_logs"
                android:summary="@string/send_logs_hint"
                android:title="@string/send_logs_"/>
        <PreferenceScreen
                android:key="send_devices"
                android:summary="@string/send_devices_hint"
                android:title="@string/send_devices_"/>
    </PreferenceCategory>

</PreferenceScreen>
