<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009-2013 Felix Bechstein -->
<!--
		This file is part of Call Meter 3G. This program is free software; you
		can redistribute it and/or modify it under the terms of the GNU
		General Public License as published by the Free Software Foundation;
		either version 3 of the License, or (at your option) any later
		version.
-->
<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:key="import_rules_base">

    <PreferenceScreen
            android:key="import_rules_default"
            android:summary="@string/import_rules_default_hint"
            android:title="@string/import_rules_default_"/>
    <PreferenceScreen
            android:key="import_rules_sd"
            android:summary="@string/import_rules_sd_hint"
            android:title="@string/import_rules_sd_">
        <intent
                android:action="android.intent.action.MAIN"
                android:targetClass="de.ub0r.android.callmeter.ui.prefs.PreferencesImport"
                android:targetPackage="de.ub0r.android.callmeter"/>
    </PreferenceScreen>

    <PreferenceCategory
            android:key="import_rules_users"
            android:title="@string/import_rules_users">
        <PreferenceScreen
                android:enabled="false"
                android:title="@string/loading"/>
    </PreferenceCategory>

</PreferenceScreen>