<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009-2013 Felix Bechstein -->
<!--
		This file is part of Call Meter 3G. This program is free software; you
		can redistribute it and/or modify it under the terms of the GNU
		General Public License as published by the Free Software Foundation;
		either version 3 of the License, or (at your option) any later
		version.
-->
<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="container" >

    <PreferenceCategory android:title="@string/common_prefs_" >
        <ListPreference
            android:entries="@array/billdays"
            android:entryValues="@array/billdays"
            android:key="sp_billday"
            android:summary="@string/billday_help"
            android:title="@string/billday_" />
    </PreferenceCategory>

    <PreferenceScreen android:title="@string/calls" >
        <intent
            android:action="CALLS"
            android:targetClass="de.ub0r.android.callmeter.ui.prefs.SimplePreferencesChild"
            android:targetPackage="de.ub0r.android.callmeter" />
    </PreferenceScreen>
    <PreferenceScreen
        android:key="calls_2"
        android:summary="@string/second_sim_"
        android:title="@string/calls" >
        <intent
            android:action="CALLS_2"
            android:targetClass="de.ub0r.android.callmeter.ui.prefs.SimplePreferencesChild"
            android:targetPackage="de.ub0r.android.callmeter" />
    </PreferenceScreen>
    <PreferenceScreen
        android:key="calls_voip"
        android:summary="@string/calls_voip_"
        android:title="@string/calls" >
        <intent
            android:action="CALLS_VOIP"
            android:targetClass="de.ub0r.android.callmeter.ui.prefs.SimplePreferencesChild"
            android:targetPackage="de.ub0r.android.callmeter" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/sms" >
        <intent
            android:action="SMS"
            android:targetClass="de.ub0r.android.callmeter.ui.prefs.SimplePreferencesChild"
            android:targetPackage="de.ub0r.android.callmeter" />
    </PreferenceScreen>
    <PreferenceScreen
        android:key="sms_2"
        android:summary="@string/second_sim_"
        android:title="@string/sms" >
        <intent
            android:action="SMS_2"
            android:targetClass="de.ub0r.android.callmeter.ui.prefs.SimplePreferencesChild"
            android:targetPackage="de.ub0r.android.callmeter" />
    </PreferenceScreen>
    <PreferenceScreen
        android:key="sms_websms"
        android:summary="@string/websms_"
        android:title="@string/sms" >
        <intent
            android:action="SMS_WEBSMS"
            android:targetClass="de.ub0r.android.callmeter.ui.prefs.SimplePreferencesChild"
            android:targetPackage="de.ub0r.android.callmeter" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/mms" >
        <intent
            android:action="MMS"
            android:targetClass="de.ub0r.android.callmeter.ui.prefs.SimplePreferencesChild"
            android:targetPackage="de.ub0r.android.callmeter" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/data" >
        <intent
            android:action="DATA"
            android:targetClass="de.ub0r.android.callmeter.ui.prefs.SimplePreferencesChild"
            android:targetPackage="de.ub0r.android.callmeter" />
    </PreferenceScreen>

</PreferenceScreen>